[package]
edition = "2018"
name = "websocket_serial_server"
version = "0.2.0"
authors = ["Daniel Joyce <daniel.a.joyce@gmail.com>", "Michael van Niekerk <mvniekerk@gmail.com>"]
description = "A websocket server providing access to local serial ports"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
argparse = "0.2.1"
base64 = "0.13.0"
daemonize = "0.4.1"
debug_stub_derive = "0.3.0"
env_logger = "0.8.3"
error-chain = "0.12.4"
hyper = "0.14.4"
log = "0.3.7"
rand = "0.8.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
serialport = "4"
thread-control = "0.1.2"
toml = "0.5.8"
websocket = "0.26.2"

[dev-dependencies]
tempfile = "3"

[lib]
name="lib"
path="src/lib/mod.rs"

[[bin]]
name = "wsss"
path = "src/bin/main.rs"
